5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1795_1599.log
== TEST (2019-05-30 16:04:53) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=15/100
while(i< size(c)):
	if(c[i]>80):
		c=c*p
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:28) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=15/100
total=0
while(i< size(c)):
	if(c[i]>80):
		c=c[i]*p

print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:49) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=15/100
total=0

while(i< size(c)):
	if (c[i] > 80):
		c=c[i]*p
		i+=1
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:01) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15
total=0

while(i< size(c)):
	if (c[i] > 80):
		c=c[i] * p
		i+=1

print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:56) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15
total=0
ct=0
while(i < size(c)):
	if (c[i] > 80):
		c[i]= c[i] * p
	i=i+1
ct=sum(c)
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:29) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15
total=0
ct=0
while(i < size(c)):
	if (c[i] > 80):
		c[i]= c[i] * p
	i=i+1
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:00) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0

total=0
ct=0
while(i < size(c)):
	if (c[i] > 80):
		c[i]= c[i] * (15/100)
	i=i+1
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:40) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15

ct=0
while(i < size(c)):
	if (c[i] > 80):
		d= c[i] * p
			c[i]=c[i]-d
	i=i+1
	print(c)
-- ERROR:
File "XXXX", line 10
    c[i]=c[i]-d
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:47) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15

ct=0
while(i < size(c)):
	if (c[i] > 80):
		d= c[i] * p
		c[i]=c[i]-d
	i=i+1
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:14) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15

ct=0
while(i < size(c)):
	if (c[i] > 80):
		d= c[i] * p
		c[i]=c[i]-d
	i=i+1
	ct=+c[i]
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:34) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15

ct=0
while(i < size(c)):
	if (c[i] > 80):
		d= c[i] * p
		c[i]=c[i]-d
	i=i+1
	ct=sum(c)
print(round(ct,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:26:25) 
-- CODE:
from numpy import*
c= array(eval(input("Insira o valor das compras:")))
i=0
p=0.15

ct=0
while(i < size(c)):
	if (c[i] > 80):
		d= c[i] * p
		c[i]=c[i]-d
	i=i+1
	ct=sum(c)
print(round(ct,2))
-- EXECUTION TIME:
0.41489
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
